# logkafka

./: .gitignore  AUTHORS  CMakeLists.txt  LICENCE  LICENSE  LICENSE.MIT  README.md
conf/: easylogging.conf  logkafka.conf
docs/: FAQ.md  Features.md  Users.md  install-libgdbm.md  install-libpcre2.md  install-librdkafka.md  install-libuv.md  install-libzookeeper_mt.md  install-php-zookeeper-extension.md
docs/ppt/: log_collection_research_report.key  logkafka.graffle
modules/: Buildlibpcre2.cmake  Buildlibrdkafka.cmake  Buildlibuv.cmake  Buildlibzookeeper_mt.cmake  Findlibgcov.cmake  Findlibpcre2.cmake  Findlibpthread.cmake  Findlibrdkafka.cmake  Findlibrt.cmake  Findlibuv.cmake  Findlibz.cmake  Findlibzookeeper_mt.cmake
patches/: ZOOKEEPER-2049.noprefix.trunk.patch
src/: CMakeLists.txt
src/base/: IndexedProperty.h  Property.h  ROProperty.h  RWProperty.h  WOProperty.h  common.h  json.cc  json.h  mutex.h  noncopyable.h  scoped_lock.h  singleton.h  stat_watcher.cc  stat_watcher.h  timer_watcher.cc  timer_watcher.h  tools.cc  tools.h
src/logkafka/: common.h  config.cc  config.h  file_position_entry.cc  file_position_entry.h  filter.h  filter_regex.cc  filter_regex.h  io_handler.cc  io_handler.h  logkafka.cc  logkafka.h  main.cc  manager.cc  manager.h  memory_position_entry.cc  memory_position_entry.h  option.cc  option.h  output.h  output_kafka.cc  output_kafka.h  position_entry.h  position_file.cc  position_file.h  producer.cc  producer.h  properties.h  rotate_handler.cc  rotate_handler.h  signal_handler.cc  signal_handler.h  tail_watcher.cc  tail_watcher.h  task_conf.h  zookeeper.cc  zookeeper.h
tools/: grid  log_config.php
tools/base/: Monitor.php
tools/getopt-php/: Argument.php  CommandLineParser.php  Getopt.php  Option.php  OptionParser.php
tools/plugin/: MonitorDefault.php  MonitorZheolong.php
unittest/: CMakeLists.txt
unittest/conf/: easylogging.conf
unittest/src/: config_test.cc  manager_test.cc  tools_test.cc
